@@ -1,19 +1,22 @@
 package com.example.barbershop.service;
 
+import com.example.barbershop.dto.AppointmentResponseDto;
 import com.example.barbershop.entity.*;
 import com.example.barbershop.repository.*;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import com.example.barbershop.dto.AppointmentResponseDto;
-import java.util.stream.Collectors;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
+@Slf4j
 public class AppointmentService {
 
     private final AppointmentRepository appointmentRepository;
@@ -30,9 +33,10 @@ public class AppointmentService {
         BarberService barberService = barberServiceRepository.findById(barberServiceId)
                 .orElseThrow(() -> new IllegalArgumentException("Услуга мастера не найдена"));
 
+        // Проверяем доступность времени с учетом длительности услуги
         if (!isTimeSlotAvailable(barberService.getBarber().getId(), dateTime,
                 barberService.getActualDurationMinutes())) {
-            throw new IllegalArgumentException("Выбранное время занято");
+            throw new IllegalArgumentException("Выбранное время занято. Выберите другое время.");
         }
 
         Appointment appointment = new Appointment();
@@ -40,24 +44,67 @@ public class AppointmentService {
         appointment.setBarberService(barberService);
         appointment.setAppointmentDateTime(dateTime);
         appointment.setStatus(Appointment.AppointmentStatus.SCHEDULED);
+        appointment.setCreatedAt(LocalDateTime.now());
+
+        log.info("Создана запись: клиент={}, мастер={}, время={}, услуга={}",
+                client.getEmail(),
+                barberService.getBarber().getUser().getEmail(),
+                dateTime,
+                barberService.getService().getName());
 
         return appointmentRepository.save(appointment);
     }
 
     /**
-     * Проверить доступность временного слота для мастера.
+     * Проверить доступность временного слота для мастера с учетом длительности.
+     * Проверяет ВСЕ услуги мастера на пересечение времени.
      */
-    private boolean isTimeSlotAvailable(Long barberId, LocalDateTime startTime, Integer durationMinutes) {
+    private boolean isTimeSlotAvailable(Long barberId, LocalDateTime newStartTime, Integer newDurationMinutes) {
+        LocalDateTime newEndTime = newStartTime.plusMinutes(newDurationMinutes);
+
+        log.info("🔍 Проверка времени: мастер={}, новое время={}-{} ({} мин)",
+                barberId, newStartTime, newEndTime, newDurationMinutes);
+
+        // 1. Найти ВСЕ существующие записи мастера (через все его услуги)
+        List<Appointment> allBarberAppointments = new ArrayList<>();
+
+        // Найти все услуги мастера
         List<BarberService> barberServices = barberServiceRepository.findByBarberId(barberId);
 
+        // Для каждой услуги мастера найти все записи
         for (BarberService bs : barberServices) {
-            List<Appointment> existingAppointments = appointmentRepository
-                    .findByBarberServiceIdAndAppointmentDateTime(bs.getId(), startTime);
+            List<Appointment> appointmentsForService = appointmentRepository.findByBarberServiceId(bs.getId());
+            allBarberAppointments.addAll(appointmentsForService);
+        }
 
-            if (!existingAppointments.isEmpty()) {
+        log.info("Найдено {} существующих записей мастера", allBarberAppointments.size());
+
+        // 2. Проверить каждую существующую запись
+        for (Appointment existing : allBarberAppointments) {
+            // Пропускаем отмененные
+            if (existing.getStatus() == Appointment.AppointmentStatus.CANCELLED) {
+                continue;
+            }
+
+            LocalDateTime existingStart = existing.getAppointmentDateTime();
+            Integer existingDuration = existing.getBarberService().getActualDurationMinutes();
+            LocalDateTime existingEnd = existingStart.plusMinutes(existingDuration);
+
+            log.info("  Существующая: {} - {} ({} мин, статус: {})",
+                    existingStart, existingEnd, existingDuration, existing.getStatus());
+
+            // Проверяем пересечение: новое начало ДО существующего конца
+            // И новое конец ПОСЛЕ существующего начала
+            boolean isOverlapping = newStartTime.isBefore(existingEnd) && newEndTime.isAfter(existingStart);
+
+            if (isOverlapping) {
+                log.warn("⛔ Время занято! Пересечение с записью ID {}: {} - {}",
+                        existing.getId(), existingStart, existingEnd);
                 return false;
             }
         }
+
+        log.info("✅ Время свободно");
         return true;
     }
 
@@ -67,7 +114,7 @@ public class AppointmentService {
     @Transactional
     public void createTestBarberServices() {
         if (barberServiceRepository.count() == 0) {
-            System.out.println("=== СОЗДАНИЕ ТЕСТОВЫХ УСЛУГ МАСТЕРОВ ===");
+            log.info("=== СОЗДАНИЕ ТЕСТОВЫХ УСЛУГ МАСТЕРОВ ===");
 
             // 1. Найти или создать услуги
             if (serviceRepository.count() == 0) {
@@ -92,7 +139,7 @@ public class AppointmentService {
                 complex.setBasePrice(2000.0);
                 serviceRepository.save(complex);
 
-                System.out.println("Создано 3 услуги");
+                log.info("Создано 3 услуги");
             }
 
             // 2. Найти мастера (User) и связанную сущность Barber
@@ -116,15 +163,61 @@ public class AppointmentService {
                     BarberService bs = new BarberService();
                     bs.setBarber(barber);
                     bs.setService(service);
-                    bs.setActualPrice(service.getBasePrice()); // Используем базовую цену
-                    bs.setActualDurationMinutes(service.getBaseDurationMinutes()); // Используем базовую длительность
+                    bs.setActualPrice(service.getBasePrice());
+                    bs.setActualDurationMinutes(service.getBaseDurationMinutes());
                     barberServiceRepository.save(bs);
 
-                    System.out.println("Создана связь: " + barber.getUser().getFirstName() + " - " + service.getName() + " (ID: " + bs.getId() + ")");
+                    log.info("Создана связь: {} - {} (ID: {})",
+                            barber.getUser().getFirstName(), service.getName(), bs.getId());
                 }
             }
 
-            System.out.println("=== ГОТОВО: " + barberServiceRepository.count() + " услуг мастеров ===");
+            log.info("=== ГОТОВО: {} услуг мастеров ===", barberServiceRepository.count());
+        }
+    }
+
+    /**
+     * Создать тестовую запись для проверки.
+     */
+    @Transactional
+    public void createTestAppointment() {
+        if (appointmentRepository.count() == 0) {
+            log.info("=== СОЗДАНИЕ ТЕСТОВОЙ ЗАПИСИ ===");
+
+            // Найти клиента
+            User client = userRepository.findByEmail("client@test.ru")
+                    .orElseThrow(() -> new RuntimeException("Клиент client@test.ru не найден"));
+
+            // Найти мастера
+            User barberUser = userRepository.findByEmail("barber@test.ru")
+                    .orElseThrow(() -> new RuntimeException("Мастер не найден"));
+
+            Barber barber = barberRepository.findByUserId(barberUser.getId())
+                    .orElseThrow(() -> new RuntimeException("Сущность Barber не найдена"));
+
+            // Взять первую услугу мастера
+            List<BarberService> barberServices = barberServiceRepository.findByBarberId(barber.getId());
+            if (!barberServices.isEmpty()) {
+                BarberService barberService = barberServices.get(0);
+
+                // Создать запись на завтра в 10:00
+                LocalDateTime tomorrow10am = LocalDateTime.now()
+                        .plusDays(1)
+                        .withHour(10)
+                        .withMinute(0)
+                        .withSecond(0)
+                        .withNano(0);
+
+                Appointment appointment = new Appointment();
+                appointment.setClient(client);
+                appointment.setBarberService(barberService);
+                appointment.setAppointmentDateTime(tomorrow10am);
+                appointment.setStatus(Appointment.AppointmentStatus.SCHEDULED);
+                appointment.setCreatedAt(LocalDateTime.now());
+
+                appointmentRepository.save(appointment);
+                log.info("✅ Создана тестовая запись для мастера: {}", barberUser.getEmail());
+            }
         }
     }
 
@@ -163,7 +256,7 @@ public class AppointmentService {
 
         List<Long> barberServiceIds = barberServices.stream()
                 .map(BarberService::getId)
-                .toList();
+                .collect(Collectors.toList());
 
         return appointmentRepository.findByBarberServiceIdIn(barberServiceIds);
     }
@@ -174,6 +267,7 @@ public class AppointmentService {
     public List<Appointment> findAll() {
         return appointmentRepository.findAll();
     }
+
     public List<AppointmentResponseDto> getAllAppointmentsAsDto() {
         return appointmentRepository.findAll().stream()
                 .map(this::convertToDto)
@@ -181,12 +275,14 @@ public class AppointmentService {
     }
 
     public AppointmentResponseDto convertToDto(Appointment appointment) {
+        log.debug("Конвертация записи ID {} в DTO", appointment.getId());
+
         AppointmentResponseDto dto = new AppointmentResponseDto();
 
         // Основные поля
         dto.setId(appointment.getId());
         dto.setAppointmentDateTime(appointment.getAppointmentDateTime());
-        dto.setStatus(appointment.getStatus().name());
+        dto.setStatus(appointment.getStatus() != null ? appointment.getStatus().name() : "UNKNOWN");
         dto.setCreatedAt(appointment.getCreatedAt());
 
         // Информация о клиенте
@@ -206,7 +302,6 @@ public class AppointmentService {
                 }
                 clientFullName += client.getLastName();
             }
-            // Если оба поля пустые - используем email
             dto.setClientName(clientFullName.isEmpty() ? client.getEmail() : clientFullName);
         }
 
@@ -219,7 +314,8 @@ public class AppointmentService {
                 ServiceItem service = barberService.getService();
                 dto.setServiceId(service.getId());
                 dto.setServiceName(service.getName());
-                dto.setServicePrice(service.getBasePrice()); // <-- ИСПРАВЛЕНО!
+                dto.setServicePrice(barberService.getActualPrice());
+                dto.setServiceDurationMinutes(barberService.getActualDurationMinutes()); // Добавляем длительность
             }
 
             // Мастер
@@ -229,7 +325,6 @@ public class AppointmentService {
 
                 if (barber.getUser() != null) {
                     User barberUser = barber.getUser();
-                    // Аналогично для имени мастера
                     String barberFullName = "";
                     if (barberUser.getFirstName() != null) {
                         barberFullName += barberUser.getFirstName();
@@ -245,6 +340,7 @@ public class AppointmentService {
             }
         }
 
+        log.debug("DTO создан: {}", dto);
         return dto;
     }
 }
